remove event purpose from edit event

--- a/src/app/view/event-edit/event-edit.component.html
+++ b/src/app/view/event-edit/event-edit.component.html
@@ -118,10 +118,10 @@
                                 <li *ngFor="let org_err of errors['contact_info']">{{org_err}}</li>    
                             </ul>                           
                     </div>
-                    <div class="form_row clearfix">
+                    <!-- <div class="form_row clearfix">
                         <label>Event Purpose</label>
                         <input type="text" [(ngModel)]="showEventArr.purpose" id="purpose" name="purpose" value="" class="form-control textfield">
-                    </div>
+                    </div> -->
                     <div class="form_row clearfix">
                         <label>Event Keywords</label>
                         <div class="">                                
