--- a/src/app/view/event-detail/event-detail.component.html
+++ b/src/app/view/event-detail/event-detail.component.html
@@ -34,7 +34,7 @@
                             </div>
 
                           
-                            <div class="flexslider-container">
+                            <div class="flexslider-container" *ngIf="!no_image">
                             <div id="slider" class="event_image flexslider p-tb-30"> 
                                 <div class="flex-viewport" style="">
                                     <!-- <div class="flex-viewport" style="overflow: hidden; position: relative; height: 599px;"> -->
