--- a/src/app/view/layouts/header/header.component.html
+++ b/src/app/view/layouts/header/header.component.html
@@ -43,8 +43,8 @@
                                             <li class=""><a href="" [routerLink]="['/my-venues']">My Venue's</a></li> -->
                                             <li class=""><a href="" [routerLink]="['/my-events']">Events I've Added</a></li>
                                             <li class=""><a href="" [routerLink]="['/my-attendance']">Events I'm Attending</a></li>
-                                             <!-- <li class=""><a href="" [routerLink]="['/groups']">My Groups</a></li> -->
-                                            <li class=""><a href="" [routerLink]="['/notification-setting']">Notification Settings</a></li> 
+                                             <!-- <li class=""><a href="" [routerLink]="['/groups']">My Groups</a></li>
+                                            <li class=""><a href="" [routerLink]="['/notification-setting']">Notification Settings</a></li>  -->
                                             <li class=""><a href="" [routerLink]="['/changepassword']">Change Password</a></li>
                                             <li class="" (click) = "userLogout()"><a>Logout</a></li>
                                         </ul>
